--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
       <input type="submit" value="Create New Task">
+
+
+ <input id="btnId" type="submit" value="Create New Task">
     </form>
 
     <div id="list">
