--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div id="main-content">
-    <h1>Task Lister Lite™️</h1>
-    <form id="create-task-form" action="#" method="post">
-      <label for="new-task-description">Task description:</label>
-      <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
-      <input type="submit" value="Create New Task">
- <input id="btnId" type="submit" value="Create New Task">
+   <div id="main-content">
+     <h1>Task Lister Lite™️</h1>
+
+     <form id="create-task-form" action="#" method="post">
+     <form id="create-task-form">
+       <label for="new-task-description">Task description:</label>
+       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+       <input type="submit" value="Create New Task">
     </form>
     <div id="list">
       <h2>My Todos</h2>
