--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <form id="create-task-form">
        <label for="new-task-description">Task description:</label>
        <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
-       <input type="submit" value="Create New Task">
+       <input id="submitForm" type="submit" value="Create New Task">
        <button id="removeTask">Remove Task</button>
     </form>
     <div id="list">
